--- a/core/static/core/card_form.css
+++ b/core/static/core/card_form.css
@@ -1,7 +1,7 @@
 .save-button2 {
     text-decoration: none;
-    background-color: #0011ff;
-    color: white;
+    background-color: #BFD0CD;
+    color: black;
     border: 3px solid black;
     border-radius: 20px;
     padding: 15px;
