--- a/decks/templates/decks/card_form.html
+++ b/decks/templates/decks/card_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'core/card_form.css' %}">
-<form method="post">{% csrf_token %}
+<form method="post" style="color: black;">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Save" class="save-button2">
 </form>
