--- a/decks/templates/decks/deck_confirm_delete.html
+++ b/decks/templates/decks/deck_confirm_delete.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-    <form method="post">
+    <form method="post" style="color: black; margin-top: 30px;">
         {% csrf_token %}
-        <p>Are you sure you want to delete {{ object.name }}?</p>
+        <p>Are you sure you want to delete flashcard set named {{ object.name }}?</p>
         {{ form }}
-        <a href="{{ object.get_absolute_url }}" class="btn btn-primary">Cancel</a>
-        <input type="submit" value="Confirm" class="btn btn-danger">
+        <a href="{{ object.get_absolute_url }}" class="btn btn-primary" style="color: black; background-color: #c8d2cf; border: 2px solid black;">Cancel</a>
+        <input type="submit" value="Confirm" class="btn btn-danger" style="color: black; background-color: #BFD0CD; border: 2px solid black;">
     </form>
 {% endblock content %}
