--- a/core/static/core/card_confirm_delete.css
+++ b/core/static/core/card_confirm_delete.css
@@ -22,8 +22,8 @@
 }
 
 .delete-question p {
-    background-color: #0011ff;
-    color: white;
+    background-color: #B8C3BD;
+    color: black;
     border: 3px solid black;
     border-radius: 20px;
     padding: 15px;
