--- a/decks/templates/decks/shared.html
+++ b/decks/templates/decks/shared.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <form class="d-flex" role="search">
+    <form class="d-flex" role="search" style="margin-top: 30px;">
         <input class="form-control me-2"
                name="search"
                type="search"
@@ -9,9 +9,9 @@
         <button class="btn btn-success" type="submit">Search</button>
     </form>
     {% if search %}
-        <p>Results for: "{{ search }}"</p>
+        <p style="color: black;">Results for: "{{ search }}"</p>
     {% else %}
-        <p>All shared decks</p>
+        <p style="color: black;">All shared decks</p>
     {% endif %}
     {% include "decks/_deck_list.html" with deck_list=deck_list %}
 {% endblock content %}
