--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% if form.errors %}
-<p style="background-color: yellow; color: red;">Your username and password didn't match. Please try again.</p>
+<p style="background-color: yellow; color: red; margin-top: 30px;">Your username and password didn't match. Please try again.</p>
 {% endif %}
 
 {% if next %}
